--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@dnd-kit/sortable": "^7.0.2",
     "@dnd-kit/utilities": "^3.2.1",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/he": "^1.2.0",
     "axios": "^1.4.0",
+    "he": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
