--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "smay-taskmanager.web",
+  "name": "sb-focus.web",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "author": "Samy Bahi",
+  "description": "The front-end of a full blown taskmanager inspired by Microsoft Todo",
+  "license": "GPL-3.0-or-later",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
